k8s/grpc-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc
  name: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc
        image: eduardoarodrigues/basic:grpc-1.3.jar
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
